# agentic-customermind-gcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
01_data_foundation/: README.md
01_data_foundation/scripts/: seed_bq_table.py
01_data_foundation/sql/: 01_create_feature_view.sql  01_data_preparation.sql
02_predictive_layer/: README.md
02_predictive_layer/sql/: 01_train_kmeans.sql  02_evaluate_clusters.sql  03_database_objects_ddl.sql  03_materialize_semantic_layer.sql
03_agentic_api/: Dockerfile  README.md
03_agentic_api/app/: agent.py  main.py
03_agentic_api/app/agents/data_modeling_service/: main.py
03_agentic_api/app/agents/orchestrator_service/: main.py
03_agentic_api/app/agents/profiler_service/: main.py
03_agentic_api/app/agents/reviewer_service/: main.py
03_agentic_api/app/agents/strategist_service/: main.py
03_agentic_api/app/tools/: bq_tools.py
